# aoc2021

./: README.md  aoc.cabal  shell.nix
app/: Day18.hs  Main.hs  Parse.hs
