cabal-version:      2.4
name:               aoc
version:            0.1.0.0
author:             Lars Jellema
maintainer:         lars.jellema@gmail.com

executable aoc
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs

  build-depends:
      base
    , containers
    , extra
    , ghc
    , megaparsec
    , text

  default-extensions:
    BlockArguments
    DeriveAnyClass
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
